--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://josipDogan.github.io/aljosa-website'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Aljoša Dakić'
+
+theme = "hugo-theme-gallery"
