add some content

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,3 +3,7 @@ languageCode = 'en-us'
 title = 'Aljoša Dakić'
 
 theme = "hugo-theme-gallery"
+
+[params]
+  [params.socialIcons]
+    email = "mailto:work (at) aljosadakic.com"
