--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://lislis.github.io/aljosa-website'
+baseURL = 'https://josipdogan.github.io/aljosa-website'
 languageCode = 'en-us'
 title = 'Aljoša Dakić'
 
